--- a/Quiz-App/package.json
+++ b/Quiz-App/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build-prod": "webpack --config webpack.prod.js",
-    "build-dev": "webpack --mode development"
+    "build-dev": "webpack-dev-server --config webpack.dev.js --open"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +21,10 @@
     "sass-loader": "^10.0.2",
     "style-loader": "^1.2.1",
     "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
+  },
+  "dependencies": {
+    "bootstrap": "^4.5.2"
   }
 }
